--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 <head>
 	<title>Whale of a greeting</title>
@@ -7,6 +7,6 @@
 	<h1>hello, world</h1>
 	<a href="about.html">About this project</a>
 	<p>Call me Ishmael</p>
-	<img src="images/breaching_whale.jpg" />
+	<a href="http://flickr.com"><img src="images/breaching_whale.jpg" /></a>
 </body>
 </html>
