--- a/about.html
+++ b/about.html
@@ -7,7 +7,7 @@
 <h1>About Us</h1>
 <p>
 	This site is a sample project for the <strong>awesome</strong> Git Tutorial <a href="http://learnenough.com/git-tutorial"><em>Learn Enough Git to Be Dangerous</em></a>.
-	<img src="images/polar-bear.jpg">
+	<img src="images/polar-bear.jpg" alt="Whale">
 </p>
 </body>
 </html>
