--- a/about.html
+++ b/about.html
@@ -8,7 +8,7 @@
 <p>
 	This site is a sample project for the <strong>awesome</strong> Git Tutorial <a href="http://learnenough.com/git-tutorial"><em>Learn Enough Git to Be Dangerous</em></a>.
 
-	<img src="images/polar-bear.jpg" alt="Breaching Whale">
+	<img src="images/polar-bear.jpg" alt="Polar Bear">
 
 </body>
 </html>
