placeholders for tm fix

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<title>Whale of a greeting</title>
+	<!-- Fix the TM tag, aka insert it -->
 </head>
 <body>
 	<h1>hello, world</h1>
