--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 	<title>Whale of a greeting</title>
 	<!-- Fix the TM tag, aka insert it -->
+	<meta charset="utf-8">
 </head>
 <body>
 	<h1>hello, world</h1>
